tests/snapshots/render_snapshots__snapshot_pull_popup.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐"
"│∨Head:    main [hash] Initial commit                                         │"
"│                                                                              │"
"│∨Recent commits                                                               │"
"│ [hash] main Initial commit                                                  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"┌Pull──────────────────────────────────────────────────────────────────────────┐"
"│Arguments                                                                     │"
"│ -f Fast-forward only (--ff-only)                                             │"
"│ -r Rebase local commits (--rebase)                                           │"
"│ -a Autostash (--autostash)                                                   │"
"│ -F Force (--force)                                                           │"
"│                                                                              │"
"│Pull into main from                                                           │"
"│ p ${push-remote}, setting it                                                 │"
"│ u origin/main                                                                │"
"│ e Elsewhere                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────┘"
