tests/snapshots/render_snapshots__snapshot_push_popup.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐"
"│∨Head:    main [hash] Initial commit                                         │"
"│                                                                              │"
"│∨Recent commits                                                               │"
"┌Push──────────────────────────────────────────────────────────────────────────┐"
"│Arguments                                                                     │"
"│ -f Force with lease (--force-with-lease)                                     │"
"│ -F Force (--force)                                                           │"
"│ -h Disable hooks (--no-verify)                                               │"
"│ -n Dry run (--dry-run)                                                       │"
"│ -u Set upstream (--set-upstream)                                             │"
"│ -T Include all tags (--tags)                                                 │"
"│ -t Include related annotated tags (--follow-tags)                            │"
"│                                                                              │"
"│Push main to                                                                  │"
"│ p ${push-remote}, setting it                                                 │"
"│ u origin/main                                                                │"
"│ e Elsewhere                                                                  │"
"│                                                                              │"
"│Push                                                                          │"
"│ o Other branch        T Push a tag                                           │"
"│ r Explicit refspec    t Push all tags                                        │"
"│ m Matching branches                                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
