tests/snapshots/render_snapshots__snapshot_rebase_popup_arg_mode.snap
---
source: tests/render_snapshots.rs
expression: "render_to_styled_string(&model, 80, 24)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐",
        "│∨Head:    main [hash] Initial commit                                         │",
        "│                                                                              │",
        "│∨Recent commits                                                               │",
        "│ [hash] main Initial commit                                                  │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "┌Rebase────────────────────────────────────────────────────────────────────────┐",
        "│Arguments                                                                     │",
        "│ -k Keep empty commits (--keep-empty)                                         │",
        "│ -r Rebase merges (--rebase-merges=)                                          │",
        "│                                                                              │",
        "│Rebase main onto                                                              │",
        "│ p ${push-remote}, setting it                                                 │",
        "│ u ${upstream}, setting it                                                    │",
        "│ e Elsewhere                                                                  │",
        "│                                                                              │",
        "│Rebase                                                                        │",
        "│ i Interactively   m To modify a commit   f To autosquash                     │",
        "│ s A subset        w To reword a commit                                       │",
        "│                   k To remove a commit                                       │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Yellow, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Yellow, bg: Rgb(60, 60, 80), underline: Reset, modifier: REVERSED,
        x: 3, y: 1, fg: Yellow, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Blue, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 15, y: 1, fg: Reset, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 16, y: 1, fg: Rgb(139, 69, 19), bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 23, y: 1, fg: Reset, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 79, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: Rgb(139, 69, 19), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 4, fg: Blue, bg: Reset, underline: Reset, modifier: BOLD | UNDERLINED,
        x: 14, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 10, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 10, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 11, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 4, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 11, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 37, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 11, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 12, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 4, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 12, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 36, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 12, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 13, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 8, y: 14, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 14, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 17, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 14, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 15, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 16, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 17, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 18, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 7, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 19, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 20, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 40, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 20, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 20, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 21, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 40, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 21, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 22, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 40, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 22, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
